# Zenith

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  COMPUTE_IMPLEMENTATION_GUIDE.md  PHYSICS_MESH_IMPLEMENTATION.md  Sharpmake.cs  Sharpmake_Build.bat  Sharpmake_opencvattempt.cs  TERRAIN_CULLING_GUIDE.md  TERRAIN_CULLING_IMPLEMENTATION_SUMMARY.md  autotest_err.txt  autotest_log.txt  build_combat.txt  build_output.txt  combat_output.txt  cdevZenithbuild_output.txt  cdevZenithrebuild4_output.txt  find_locker.ps1  fluxcompiler_win64.vcxproj  fluxcompiler_win64.vcxproj.filters  game_output.txt  game_output_fresh.txt  game_output_fresh2.txt  game_output_physics_test.txt  imgui.ini  rebuild2_output.txt  rebuild3_output.txt  rebuild_output.txt  run_autotest.ps1  run_combat.bat  run_combat_log.bat  run_sokoban_tests.ps1  run_test.bat  run_test_new.ps1  run_tests.ps1  tmpclaude-7b0b-cwd  unit_test_scene.zscen  (+6 more)
Zenith/: CMakeLists.txt  Zenith_DebugBreak.h  Zenith_Main.cpp  grep.exe.stackdump
Zenith/AI/: CLAUDE.md  Zenith_AI.cpp  Zenith_AI.h  Zenith_AIDebugVariables.Tests.inl  Zenith_AIDebugVariables.cpp  Zenith_AIDebugVariables.h  Zenith_AIWorldHooks.cpp  Zenith_AIWorldHooks.h
Zenith/Android/: CLAUDE.md  Zenith_Android_DebugBreak.cpp  Zenith_Android_Main.cpp  Zenith_Android_Window.cpp  Zenith_Android_Window.h  Zenith_OS_Include.h
Zenith/AssetHandling/: CLAUDE.md  Zenith_AnimationAsset.cpp  Zenith_AnimationAsset.h  Zenith_Asset.cpp  Zenith_Asset.h  Zenith_AssetDatabase.cpp  Zenith_AssetDatabase.h  Zenith_AssetHandle.cpp  Zenith_AssetHandle.h  Zenith_AssetHandler.cpp  Zenith_AssetHandler.h  Zenith_AssetMeta.cpp  Zenith_AssetMeta.h  Zenith_AssetRef.cpp  Zenith_AssetRef.h  Zenith_AssetRegistry.Tests.inl  Zenith_AssetRegistry.cpp  Zenith_AssetRegistry.h  Zenith_AssetTypeIds.h  Zenith_AsyncAssetLoader.cpp  Zenith_AsyncAssetLoader.h  Zenith_BehaviourGraphAsset.cpp  Zenith_BehaviourGraphAsset.h  Zenith_DataAsset.cpp  Zenith_DataAsset.h  Zenith_DataAssetManager.cpp  Zenith_DataAssetManager.h  Zenith_FileWatcher.cpp  Zenith_FileWatcher.h  Zenith_FontAsset.cpp  Zenith_FontAsset.h  Zenith_Image.cpp  Zenith_Image.h  Zenith_MaterialAsset.Tests.inl  Zenith_MaterialAsset.cpp  Zenith_MaterialAsset.h  Zenith_MaterialParamTable.cpp  Zenith_MaterialParamTable.h  Zenith_MeshAsset.Tests.inl  Zenith_MeshAsset.cpp  (+16 more)
Zenith/Collections/: CLAUDE.md  Zenith_CircularQueue.h  Zenith_HashMap.h  Zenith_HashSet.h  Zenith_MemoryPool.h  Zenith_Vector.h
Zenith/Core/: CLAUDE.md  FrameContext.h  Zenith.cpp  Zenith.h  ZenithConfig.h  Zenith_AudioBus.cpp  Zenith_AudioBus.h  Zenith_AutomatedTest.cpp  Zenith_AutomatedTest.h  Zenith_BenchECS.cpp  Zenith_BenchECS.h  Zenith_Callback.h  Zenith_CommandLine.Tests.inl  Zenith_CommandLine.cpp  Zenith_CommandLine.h  Zenith_Core.cpp  Zenith_Core.h  Zenith_DragDropPayloads.h  Zenith_EditorQuery.h  Zenith_EditorWindowNames.h  Zenith_Engine.cpp  Zenith_Engine.h  Zenith_EnginePCH.cpp  Zenith_ErrorCode.h  Zenith_FileWatcher.h  Zenith_GUID.cpp  Zenith_GUID.h  Zenith_GizmoTransformAccess.h  Zenith_GraphEditorHook.h  Zenith_GraphicsOptions.cpp  Zenith_GraphicsOptions.h  Zenith_ImGuiBridgeHook.h  Zenith_Main.cpp  Zenith_ParticleData.h  Zenith_ProjectHooks.h  Zenith_PropertySystem.Tests.inl  Zenith_PropertySystem.cpp  Zenith_PropertySystem.h  Zenith_RenderGather.h  Zenith_Result.h  (+8 more)
Zenith/D3D12/: CLAUDE.md  Zenith_D3D12.cpp  Zenith_D3D12.h  Zenith_D3D12_CommandBuffer.h  Zenith_D3D12_MemoryManager.cpp  Zenith_D3D12_MemoryManager.h  Zenith_D3D12_Pipeline.h  Zenith_D3D12_Swapchain.h  Zenith_PlatformGraphics_Include_D3D12.h
Zenith/DataStream/: CLAUDE.md  Zenith_DataStream.cpp  Zenith_DataStream.h  Zenith_StreamEnvelope.cpp  Zenith_StreamEnvelope.h
Zenith/DebugVariables/: CLAUDE.md  Zenith_DebugVariables.cpp  Zenith_DebugVariables.h  Zenith_DebugVariablesImpl.h
Zenith/Editor/: CLAUDE.md  Zenith_AnimationStateMachineEditor.cpp  Zenith_AnimationStateMachineEditor.h  Zenith_Editor.Tests.inl  Zenith_Editor.cpp  Zenith_Editor.h  Zenith_EditorAutomation.Tests.inl  Zenith_EditorAutomation.cpp  Zenith_EditorAutomation.h  Zenith_EditorAutomationImpl.h  Zenith_EditorCamera.cpp  Zenith_EditorImpl.h  Zenith_EditorLog.h  Zenith_EditorMaterialUIImpl.h  Zenith_EditorQuery.cpp  Zenith_EditorSceneAccess.h  Zenith_EditorState.h  Zenith_Editor_MaterialUI.cpp  Zenith_Editor_MaterialUI.h  (+15 more)
(+15940 files in other folders)
